styles.css
body {
  font-family: "Inter", sans-serif;
  height: 100vh;
}

.navbar-style {
  background: rgba(255, 255, 255, 0.62);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
}

.text-gradient {
  background-image: linear-gradient(0deg, rgba(2, 6, 28, 1) 0%, rgba(10, 56, 117, 1) 60%, rgba(22, 112, 230, 1) 97%);
  background-clip: text;
  color: transparent;
}


.btn {
  border-radius: 50px;
}

.btn-dark-cta {
  background-color: #0C6CEE;
  color: #FFFFFF;
}

.btn-dark-cta:hover {
  background-color: #0448A3;
  color: white;
}

.btn-outline-secondary {
  color: black;
  border-color: #BBBBBB;
}

.btn-outline-secondary:hover {
  background-color: white;
  color: black;
}

.btn-outline-secondary-cta:hover {
  background-color: #D4D4D4;
}

h1 {
  letter-spacing: -1px;
}

.h1-display {
  letter-spacing: -px;
}

.color-transparent {
  background-color: transparent;
}
/* ... */

